# labscope

./: Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: ROADMAP.md  sample-report.html  sample-summary.txt
examples/: session.jsonl
src/: cli.rs  lib.rs  main.rs  model.rs  report.rs  store.rs
tests/: smoke.rs
