[package]
name = "labscope"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Passive device telemetry and recon workbench"
repository = "https://github.com/gotemzgrimze-art/labscope"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

